--- a/python_sklearn_assignment.ipynb
+++ b/python_sklearn_assignment.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Develled/ML-Assignment-1/blob/main/python_sklearn_assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "leading-boundary",
       "metadata": {
         "id": "leading-boundary"
@@ -15863,7 +15873,8 @@
       "version": "3.9.7"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
